--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">FCTControl</string>
+    <string name="no_students_yet">No students added yet</string>
+    <string name="no_business_yet">No enterprises added yet</string>
+    <string name="no_visits_yet">No visits added yet</string>
 </resources>
