--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="email">Email</string>
     <string name="name">Name</string>
     <string name="address">Address</string>
+    <string name="invalid_data">Invalid data</string>
 </resources>
