before select dialog detail student fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="company_add">%1$s company added!</string>
     <string name="error_field">Some field\'s wrong</string>
     <string name="error_no_delete">You are in add option. There is nothing to delete</string>
+
+    <string-array name="courseValues">
+        <item>2DAM</item>
+        <item>2SMR</item>
+    </string-array>
 </resources>
