--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="company_add">%1$s company added!</string>
     <string name="error_field">Some field\'s wrong</string>
     <string name="error_no_delete">You are in add option. There is nothing to delete</string>
+    <string name="student_update">1$%s updated!</string>
+    <string name="student_add">1$%s added!</string>
 
     <string-array name="courseValues">
         <item>2DAM</item>
